# NVMetalFixup

./: .gitignore  .gitmodules  README.md
.github/workflows/: main.yml
Assets/Catalina/: GeForceWeb.ron
Assets/Mojave/: GeForceWeb.ron
Assets/Ventura/: GeForceWeb.ron
NVMetalFixup/: Info.plist  kern_nvmf.cpp  kern_nvmf.hpp  kern_start.cpp  kern_stubs.cpp
NVMetalFixup.xcodeproj/: project.pbxproj
NootedWebDrivers/: DYLDPatches.cpp  DYLDPatches.hpp  GeForce.hpp  Info.plist  Maxwell.cpp  Maxwell.hpp  NWD.cpp  NWD.hpp  Pascal.cpp  Pascal.hpp  PluginStart.cpp
NootedWebDrivers.xcodeproj/: project.pbxproj
sym-replacer/: Cargo.toml
sym-replacer/src/: main.rs
