[package]
name = "sym-replacer"
version = "0.1.0"
edition = "2021"

[dependencies]
goblin = "0.7.1"
log = { version = "0.4.20", features = [
    "release_max_level_debug",
    "max_level_trace",
] }
ron = "0.8.1"
serde = { version = "1.0.193", features = ["derive"] }
simple_logger = { version = "4.2.0", features = [
    "stderr",
    "threads",
], default-features = false }
